[package]
name = "covid"
version = "0.1.0"
authors = ["juanval"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
reqwest = { version = "0.10.4", features = ["blocking"] }
anyhow = "1.0.30"
zip = "0.5.5"
csv = "1.1.3"
plotters = "0.2.14"

